<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_icons_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_icons_cam"
            android:title="@string/photography_menu" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_icons_videography"
            android:title="@string/videography_menu" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_icons_services"
            android:title="@string/our_services" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_icons_about_me"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_icons_contact_us"
                    android:title="@string/contact_us" />
                <item
                    android:id="@+id/nav_privacy_policy"
                    android:icon="@drawable/ic_icons_privacy_policy"
                    android:title="@string/privacy_policy" />
            </group>
        </menu>
    </item>

</menu>
