<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/appBarLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="san-serif-light"
            android:text="@string/who_we_are"
            android:textIsSelectable="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/desc_1"
            android:textIsSelectable="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="san-serif-light"
            android:text="@string/photos"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/desc_2"
            android:textIsSelectable="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="san-serif-light"
            android:text="@string/videos"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/desc_3"
            android:textIsSelectable="true"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="san-serif-light"
            android:text="@string/website"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/websiteLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:textIsSelectable="true"
            android:text="@string/desc_4"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>
