<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enquiryForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/enquiry_form"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_"
                android:inputType="number"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/writeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_message"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/youtube_button2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/send_mail"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>