<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="4dp"
            app:slideInterval="4000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/service_Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/carouselView"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/service_desc"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/serviceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_Desc"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/bulleted_service_list" />

        <TextView
            android:id="@+id/service_Desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serviceList"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/bg_screen1"
            android:text="@string/service_desc2" />

        <TextView
            android:id="@+id/service_Desc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/service_Desc2"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="san-serif-light"
            android:text="@string/service_desc3" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>